paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.rs:26:20
   |
26 |     let mut u: U = unsafe { std::mem::zeroed() };
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.rs:28:5
   |
28 | /     unsafe {
29 | |         u.nf.type_ = 1;
30 | |         u.nf.doublenode = 3.14;
...  |
44 | |     }
   | |_____^

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.rs:3:5
  |
3 |     n: N,
  |     ^^^^
  |
  = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
  |
3 |     n: std::mem::ManuallyDrop<N>,
  |        +++++++++++++++++++++++ +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0740`.